--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.14
   firebase_auth: ^3.3.17
@@ -27,8 +28,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.2"
 
-  flutter_lints: ^1.0.0
+flutter_icons:
+    android: true
+    ios: true
+    image_path: "assets/app_logo.png"
+
 
 flutter:
 
